--- a/stats.ipynb
+++ b/stats.ipynb
@@ -26,54 +26,58 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "target = os.listdir('../Datasets/hdd_data/target')\n",
-    "target.remove('README.md')\n",
-    "target.remove('.README.md.swp')\n",
-    "target.sort()\n",
-    "sensors = os.listdir('../Datasets/hdd_data/sensor')\n",
-    "sensors.remove('README.md')\n",
-    "sensors.remove('.README.md.swp')\n",
-    "sensors.sort()\n",
-    "imgs = os.listdir('../Datasets/hdd_data/camera')\n",
-    "imgs.remove('.DS_Store')\n",
-    "imgs.sort()\n",
+    "class Stats:\n",
+    "    def __init__(self):\n",
+    "        target = os.listdir('../Datasets/hdd_data/target')\n",
+    "        target.remove('README.md')\n",
+    "        target.remove('.README.md.swp')\n",
+    "        target.sort()\n",
+    "        sensors = os.listdir('../Datasets/hdd_data/sensor')\n",
+    "        sensors.remove('README.md')\n",
+    "        sensors.remove('.README.md.swp')\n",
+    "        sensors.sort()\n",
+    "        imgs = os.listdir('../Datasets/hdd_data/camera')\n",
+    "        imgs.remove('.DS_Store')\n",
+    "        imgs.sort()\n",
     "\n",
-    "def avg_num_frames(action: int):\n",
-    "    for j in target:\n",
-    "        frame_count = 0\n",
-    "        count = 0\n",
-    "        arr = np.load('../Datasets/hdd_data/target/%s' % j, allow_pickle=True)\n",
-    "        for i in range(round(len(arr) * 0.8)):\n",
-    "            if arr[i] == action:\n",
-    "                frame_count += 1\n",
-    "            if arr[i] == action and arr[i-1] != action:\n",
-    "                count += 1\n",
-    "        if count != 0:\n",
-    "            print(round(frame_count/count, 3))\n",
-    "        else:\n",
-    "            print('nan')\n",
-    "\n",
-    "# mode: 0 - max, 1 - avg, 2 - var\n",
-    "# sensor: 0 for acceleration, 7 for yaw rate\n",
-    "def calc_sensor_data(action: int, stat: int, sensor: int):\n",
-    "    assert stat in [0, 1, 2]\n",
-    "    assert sensor >= 0 and sensor <= 7\n",
-    "    for j in target:\n",
-    "        target_arr = np.load('../Datasets/hdd_data/target/%s' % j, allow_pickle=True)\n",
-    "        sensor_arr = np.load('../Datasets/hdd_data/sensor/%s' % j, allow_pickle=True)\n",
-    "        sensor_acc = []\n",
-    "        for i in range(round(len(target_arr) * 0.8)):\n",
-    "            if target_arr[i] == action:\n",
-    "                sensor_acc.append(sensor_arr[i][sensor])\n",
-    "        if len(sensor_acc):\n",
-    "            if stat == 0:\n",
-    "                print(np.max(sensor_acc))\n",
-    "            elif stat == 1:\n",
-    "                print(np.mean(sensor_acc))\n",
+    "    # action: left turn/right turn\n",
+    "    def avg_num_frames(action: int):\n",
+    "        for j in target:\n",
+    "            frame_count = 0\n",
+    "            count = 0\n",
+    "            arr = np.load('../Datasets/hdd_data/target/%s' % j, allow_pickle=True)\n",
+    "            for i in range(round(len(arr) * 0.8)):\n",
+    "                if arr[i] == action:\n",
+    "                    frame_count += 1\n",
+    "                if arr[i] == action and arr[i-1] != action:\n",
+    "                    count += 1\n",
+    "            if count != 0:\n",
+    "                print(round(frame_count/count, 3))\n",
     "            else:\n",
-    "                print(np.var(sensor_acc))\n",
-    "        else:\n",
-    "            print('nan')\n",
+    "                print('nan')\n",
+    "\n",
+    "    # stat: 0 - max, 1 - avg, 2 - var\n",
+    "    # sensor: 0 for acceleration, 7 for yaw rate\n",
+    "    # action: left turn/right turn etc\n",
+    "    def calc_sensor_data(action: int, stat: int, sensor: int):\n",
+    "        assert stat in [0, 1, 2]\n",
+    "        assert sensor >= 0 and sensor <= 7\n",
+    "        for j in target:\n",
+    "            target_arr = np.load('../Datasets/hdd_data/target/%s' % j, allow_pickle=True)\n",
+    "            sensor_arr = np.load('../Datasets/hdd_data/sensor/%s' % j, allow_pickle=True)\n",
+    "            sensor_acc = []\n",
+    "            for i in range(round(len(target_arr) * 0.8)):\n",
+    "                if target_arr[i] == action:\n",
+    "                    sensor_acc.append(sensor_arr[i][sensor])\n",
+    "            if len(sensor_acc):\n",
+    "                if stat == 0:\n",
+    "                    print(np.max(sensor_acc))\n",
+    "                elif stat == 1:\n",
+    "                    print(np.mean(sensor_acc))\n",
+    "                else:\n",
+    "                    print(np.var(sensor_acc))\n",
+    "            else:\n",
+    "                print('nan')\n",
     "    "
    ]
   },
@@ -706,7 +710,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.2 64-bit",
+   "display_name": "Python 3.8.2 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -720,12 +724,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.8.2"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
    }
   }
  },
